# kpeoplesink

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  kpeoplesink.cpp  kpeoplesink.h  kpeoplesink.json  kpeoplesink_source_plugin.desktop  sinkcontact.cpp  sinkcontact.h  sinkdatasource.cpp  sinkdatasource.h
src/datasource/: CMakeLists.txt  kpeoplesink.cpp  kpeoplesink.h  kpeoplesink.json  sinkcontact.cpp  sinkcontact.h  sinkdatasource.cpp  sinkdatasource.h
src/kaccounts/: CMakeLists.txt  sink-carddav-plugin.cpp  sink-carddav-plugin.h  sink-carddav.json  sync-contacts.cpp  sync-contacts.h
